# real-time-face-mask-detection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: gradio_app.py  main.py
notebook/: Mask Detection.ipynb
notebook/.ipynb_checkpoints/: Mask Detection-checkpoint.ipynb
scripts/: predict_image.py  predict_video.py  utils.py
src/: train.py
